--- a/laurentperez.fr/talks/waapi/index.html
+++ b/laurentperez.fr/talks/waapi/index.html
@@ -56,7 +56,7 @@ right: 0;
   .logo2 {
   right: 10vw;
   }
-  #progress {
+  #progressAnimator {
     width: 200px;
     height: 30px;
     background: red;
@@ -70,7 +70,7 @@ right: 0;
     ScrollTimeline (1/2 to 1/4 body height)
   </div>
   <div id="bluebox"><span style="position: absolute; bottom:0; color:white;">ScrollTimeline (full body height)</span></div>
-  <div id="progress"><span style="position: absolute; right:0; color:white;">ScrollTimeline (inner height)</span></div>
+  <div id="progressAnimator"><span style="position: absolute; right:0; color:white;">ScrollTimeline (inner height)</span></div>
   <ul id="minibox__group">
     <li class="minibox"></li>
     <li class="minibox"></li>
@@ -80,34 +80,29 @@ right: 0;
   <div class="logo logo2"></div>
 <!-- << DEMO DOM -->
 
-<script language="meetup"> /* juste du lexique */
-  /* on enregistre nos AnimationWorklets */
-  /* 3 pour la timeline d'un scroll */
-  registerAnimator('headerheight', class {
+<script language="meetup">
+  /* on enregistre nos Animators */
+  /* il n'y a aucune Scène ou le ballet joue */
+  /* c'est la WorkletAnimation qui va donner la Scène : timeline, ou scroll */
+  registerAnimator('headerReduceAnimator', class {
     animate(currentTime, effect) {
       effect.localTime = currentTime;
     }
   });
-  registerAnimator('blueboxfade', class {
+  registerAnimator('fadeAnimator', class {
     animate(currentTime, effect) {
       effect.localTime = currentTime;
     }
   });
-  registerAnimator('progress', class {
+  registerAnimator('progressAnimator', class {
     animate(currentTime, effect) {
-      console.log("progress:" + Math.round(currentTime));
+      console.log("progressAnimator:" + Math.round(currentTime));
       effect.localTime = currentTime;
     }
   });
-  /* 2 pour la timeline naturelle, document.timeline */
-  registerAnimator('logo', class {
-    animate(currentTime, effect) {
-      effect.localTime = currentTime / 10; /* on manipule le temps */
-    }
-  });
-  /* dont 1 avec etat stateful  */
+  /* dont 1 avec arguments, etat stateful  */
   /* nb: c'est pas le defaut, stateless lui est optimise */
-  registerAnimator('logo2', class {
+  registerAnimator('logo2Animator', class {
     constructor(options, state = { slowBy : 20}) { /* avec args */
       this.slowBy = state.slowBy;
     }
@@ -122,7 +117,7 @@ right: 0;
   });
   /* des groupes d'effets décalés avec GroupEffect */
   /* --enable-blink-features=GroupEffect */
-  registerAnimator('logoGroup', class {
+  registerAnimator('logoAnimator', class {
     animate(currentTime, effect) {
       let effects = effect.getChildren();
       effects[0].localTime = currentTime / 10;
@@ -130,7 +125,7 @@ right: 0;
       effects[2].localTime = currentTime / 30;
     }
   });
-  registerAnimator('miniboxGroup', class {
+  registerAnimator('echelonAnimator', class {
     animate(currentTime, effect) {
       let effects = effect.getChildren();
       /* escalier */
@@ -151,12 +146,10 @@ right: 0;
 
   let logo1; /* non anonyme pour montrer les playback control */
   let logo2;
-  let effect1;
-  let effect2;
-  let effect3;
-  let miniEffects = [];
-  let grouped;
-  let grouped2;
+  let effectRotateScale;
+  let effectRotate;
+  let effectShadow;
+  let effectsEchelon = [];
 
   async function init() {
     /* ajout du module meetup (lexique) */
@@ -164,9 +157,9 @@ right: 0;
       urlFromTag("script[language='meetup']")
     );
     
-    /* nos KeyframeEffects */
-    /* pas de Houdini ici, du WAAPI classique */
-    effect1 = new KeyframeEffect(
+    /* on enregistre nos KeyframeEffects */
+    /* PAS de Houdini ici, c'est du WAAPI classique */
+    effectRotateScale = new KeyframeEffect(
         document.querySelector('.logo'),
         [
         { transform: 'rotate(0)'},{ transform: 'rotate(360deg)'},
@@ -177,7 +170,7 @@ right: 0;
           iterations: Number.POSITIVE_INFINITY
         }
       );
-    effect2  = new KeyframeEffect(
+    effectRotate  = new KeyframeEffect(
         document.querySelector('.logo2'),
         [
         { transform: 'rotate(0)'},{ transform: 'rotate(360deg)'},
@@ -187,7 +180,7 @@ right: 0;
           iterations: Number.POSITIVE_INFINITY
         }
       )
-    effect3  = new KeyframeEffect(
+    effectShadow  = new KeyframeEffect(
         document.querySelector('.logo2'),
         [
         { boxShadow: '4px 4px 55px blue' },{ boxShadow: '4px 4px 25px red' }
@@ -199,7 +192,7 @@ right: 0;
       )
       /* Effect sur tous les <ul> > <li> (boites violettes) */
       document.querySelectorAll('.minibox').forEach(e => {
-        miniEffects.push(new KeyframeEffect(
+        effectsEchelon.push(new KeyframeEffect(
         e, 
         [{transform: 'translateX(0px)'},{transform: 'translateX(200px)'},
          {offset: 0.5, transform: 'scale(1.5,1.5)'}],
@@ -208,30 +201,34 @@ right: 0;
         )
       });
 
-    /* nos Worklets Animation, Houdini */
-    /* les logos en bas, relatifs au temps de document.timeline */
-    logo1 = new WorkletAnimation(
-      'logo', /* l'Animator registered */
-      effect1, /* l'effet */
-      document.timeline /* le temps naturel */
-    );
-    logo2 = new WorkletAnimation(
-      'logo2',
-      effect2,
-      document.timeline
-    );
-
-    /* les rectangles relatifs au temps de scroll.timeline */
-    new WorkletAnimation(
-      'headerheight',
-      new KeyframeEffect(
+      effectHeaderReduce = new KeyframeEffect(
         document.querySelector('#header'), /* le header rose */
         [{height: CSS.vh(50)}, {height: CSS.px(30)}], /* réduit à 30px */
-        {
-          duration: 2000,
-          fill: 'both'
-        }
-      ),
+        {duration: 2000,fill: 'both'}
+      );
+
+      effectFade = new KeyframeEffect(
+        document.querySelector('#bluebox'), /*boite bleue*/
+        [{opacity: 0}, {opacity: 1}],
+        {duration: 2000, iterations: 1}
+      );
+
+      effectProgress = new KeyframeEffect(
+        document.querySelector('#progressAnimator'), /* le rectangle range */ 
+        [{width: 0, background:'green'},
+         {width: CSS.px(document.body.clientWidth), background:'red'}],
+         {duration: 2000, fill: 'both'}
+      );
+
+    /* nos Worklets Animation, Houdini */
+    /* c'est la somme d'un Animator + effect(s) sur une timeline */
+    /* l'Animator donne le temps des effects */
+    /* relatifs à une timeline, la Scène : document ou scroll */
+
+    /* le header rose */
+    new WorkletAnimation(
+      'headerReduceAnimator',
+      effectHeaderReduce,
       /* pas document.timeline, mais une ScrollTimeLine */
       new ScrollTimeline({
         scrollSource: document.scrollingElement, /* = body par défaut */ 
@@ -243,11 +240,10 @@ right: 0;
       })
     ).play();
 
+    /* la blue box */
     new WorkletAnimation(
-      'blueboxfade',
-      new KeyframeEffect(document.querySelector('#bluebox'), /*boite bleue*/
-                    [{opacity: 0}, {opacity: 1}],
-                    {duration: 2000, iterations: 1}),
+      'fadeAnimator',
+      effectFade,
       new ScrollTimeline({
         scrollSource: document.scrollingElement, 
         orientation: "vertical",
@@ -256,14 +252,10 @@ right: 0;
       })
     ).play();
 
+    /* la progress bar */
     new WorkletAnimation(
-      'progress',
-      new KeyframeEffect(
-        document.querySelector('#progress'), /* le rectangle range */ 
-        [{width: 0, background:'green'},
-         {width: CSS.px(document.body.clientWidth), background:'red'}],
-         {duration: 2000, fill: 'both'}
-      ),
+      'progressAnimator',
+      effectProgress,
       new ScrollTimeline({
         scrollSource: document.querySelector(".inner"), /*scroll inner */ 
         orientation: "vertical",
@@ -273,14 +265,17 @@ right: 0;
 
     // /Applications/Google\ Chrome\ Canary.app/Contents/MacOS/Google\ Chrome\ Canary
     // --enable-blink-features=GroupEffect
-    grouped = new WorkletAnimation('logoGroup', [effect1, effect2, effect3]);
-    grouped.play();
 
-    grouped2 = new WorkletAnimation('miniboxGroup', miniEffects);
-    grouped2.play();
+    /* les logos, relatifs au temps de scroll.timeline */
+    let groupedLogos = new WorkletAnimation('logoAnimator', 
+    [effectRotateScale, effectRotate, effectShadow]);
+    groupedLogos.play();
 
-    // logo1.play();
-    // logo2.play();
+    /* les boites, relatifs au temps de scroll.timeline */
+    let groupedBoxes = new WorkletAnimation('echelonAnimator', 
+    effectsEchelon);
+    groupedBoxes.play();
+
   }
   init();
 
