no meetup pur web

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -49,11 +49,11 @@
 				<section>
 					<p>Meetup AFUP / Web Front</p>
 					<p>Un talk frontend pour développeurs.ses mais aussi créas, UI</p>
-					<p>"Le moteur CSS envoûté par la magie d'Houdini"</p>
+					<p>"Les CSS envoûtées par la magie d'Houdini"</p>
 					<p>Dessin et animations nouvelle génération, et plus encore</p>
 					<p><img src="awe.png" alt=""></p>
 					<p><img src="mth.jpg" width="30px"/></p>
-					<small>laurentperez.fr/talks/css1</small>
+					<small>@laurentperez / Slack Comm MPL</small>
 				</section>
 				<!--
 
@@ -530,9 +530,9 @@ background-image:paint('compteur')
 					<h2>Merci</h2>
 					<p><small>"à la fin, c'est toujours l'Open Web qui gagne, ça prend juste du temps" - Yann</small></p>
 					<p>Speakers wanted</p>
-					<p>sur des sujets front/privacy, pour un Meetup pur web</p>
+					<p>sur des sujets web front</p>
 					<p>@laurentperez / Slack Comm MPL</p>
-					<p><small>merci spécial à Chloe, Charlotte, Estelle, Juliens, Hugo, Alane &amp; + tout le MTH</small></p>
+					<p><small>merci spécial à Chloe, Charlotte, Estelle, Juliens, Hugo &amp; + tout le MTH</small></p>
 				</section>
 
 			</div>
