vanilla browser iconstldr

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -199,6 +199,7 @@
 			</section>
 
 			<section>
+				<p><img src="bicons.png" width="200px" alt=""></p>
 				<p>Chromium (Blink) et Safari (WebKit) devant</p>
 				<p>Firefox (Servo) derrière, IE va utiliser Blink</p>
 				<p >La Team IE Edge va verser le meilleur de Edge dans Blink (Reddit aMa 06/19), réouvrir <a href="https://www.reddit.com/r/IAmA/comments/c094uf/hi_reddit_were_the_team_behind_microsoft_edge_and/">des API bloquées contre adblockers</a></p>
@@ -436,7 +437,7 @@ background-image:paint('compteur')
 			<section>
 				<h2>🖼️ Layout API 🖼️</h2>
 				<p>Quand flex column ou grid ne te suffisent plus (oui oui)</p>
-				<p class="fragment fade-up">tl;dr : écrire son propre display:layout('monlayoutperso');</p>
+				<p class="fragment fade-up">c'est pour écrire son propre display:layout('monlayoutperso');</p>
 				<p><a href="https://houdini.glitch.me/layout">https://houdini.glitch.me/layout</a></p>
 				<p class="fragment fade-up">Conteneur de <em>LayoutChild/Fragments</em> dans un <em>ParentLayout</em></p>
 				<small class="fragment fade-up">Le <em>Parent</em> a des borders, paddings : les <em>Edges</em>. Entre ces <em>Edges</em>, on a des <em>Constraints</em>. Les <em>LayoutChild</em> sont dans ces <em>Constraints</em> et ont des <em>Fragments</em></small>
@@ -532,7 +533,7 @@ background-image:paint('compteur')
 					<p>Speakers wanted</p>
 					<p>sur des sujets web front</p>
 					<p>@laurentperez / Slack Comm MPL</p>
-					<p><small>merci spécial à Chloe, Charlotte, Estelle, Juliens, Hugo &amp; + tout le MTH</small></p>
+					<p><small>merci spécial à Chloe, Charlotte, Estelle, Juliens, Hugo + tout le MTH</small></p>
 				</section>
 
 			</div>
