--- a/laurentperez.fr/talks/cssp/index.html
+++ b/laurentperez.fr/talks/cssp/index.html
@@ -23,13 +23,27 @@
     padding: 15px;
     border: 1px solid rebeccapurple;
   }
-  .starbox {
-    --sky: #e1e7f1; /* mon ciel  */
+  .lucy {
+    --sky: #b4fff9; /* mon ciel  */
+    height: 200px;
     background-color: var(--sky);
     background-image: url('cloud.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position-x: right;
+    transition: all 4s;
+  }
+  .lucy:after {
+  content: "";
+  position: absolute;
+  opacity: .2;
+  width: 100%;
+  height: 200px;
+  background: url("van.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+ }
+  .starbox {
     display: flex;
     border: 1px solid rebeccapurple;
     transition: all 4s;
@@ -64,7 +78,13 @@
 }
 </style>
 
-<h2>Properties API + Paint API : typage et dessin custom</h2>
+<h2>Properties API : typage perso</h2>
+  <div class="lucy"></div>
+<section>
+
+</section>
+
+<h2>Paint API : typage et dessin perso</h2>
 
 <section class="starbox">
   <img class="photo" src="https://placekitten.com/100/100" alt="">
@@ -74,7 +94,7 @@
   <p class="under">Un texte avec une underline dessinée custom</p>
 </section>
 
-<h2>Layout API : placement custom de 2 enfants : 2 1ers dans les coins, le reste au milieu</h2>
+<h2>Layout API : placement perso de 2 enfants : 2 1ers dans les coins, le reste au milieu</h2>
 
 <section class="coins" style="visibility: xx">
     <div class="coinschild" style="width:100px">#1 lorem ipsum bla bla bla bla <img src="https://placekitten.com/100/100"/></div>
