logos cha chloe

--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -48,7 +48,6 @@
 				
 				<section>
 					<p>Meetup AFUP / Web Front</p>
-					<p>Un talk frontend pour développeurs.ses mais aussi créas, UI</p>
 					<p>"Les CSS envoûtées par la magie d'Houdini"</p>
 					<p>Dessin et animations nouvelle génération, et plus encore</p>
 					<p><img src="awe.png" alt=""></p>
@@ -73,6 +72,7 @@
 				-->
 				<section>
 					<h2>Nos hôtes</h2>
+					<p><img src="invivo.png" width="200px" alt="">&nbsp;<img src="afup.png" width="200px" alt=""></p>
 					<p>... votre speaker</p>
 					<p>... et vous !</p>
 				</section>
@@ -491,44 +491,7 @@ background-image:paint('compteur')
 				-->
 
 
-				<style>
-						.darkside_txt {
-							color: white;
-						}
-						.darkside {
-							background-image:url('anakin.png');
-							background-size: contain;
-							height:250px;
-						}
-						@media (prefers-color-scheme: dark) {
-							body {
-								background-color: black;
-								color: white;
-							}
-							.darkside {
-								background-image:url('vador.jpg');
-							}
-							.darkside_txt {
-								color: red;
-							}
-						}
-						</style>
-						<section>
-							<h2>Dark mode</h2>
-							<p class="darkside_txt">iOS13, Android Q</p>
-							<pre><code class="css" data-trim data-line-numbers="1">
-	@media (prefers-color-scheme: dark) {
-		body {
-			background-color: black;
-			color: white;
-		}
-		.darkside {
-			background-image:url('vador.jpg')
-		}
-		}
-								</code></pre>
-								<p class="darkside"></p>
-						</section>
+				
 
 				<section>
 					<h2>Merci</h2>
@@ -536,7 +499,7 @@ background-image:paint('compteur')
 					<p>Speakers wanted</p>
 					<p>sur des sujets web front</p>
 					<p>@laurentperez / Slack Comm MPL</p>
-					<p><small>merci spécial à Chloe, Charlotte, Estelle, Juliens, Hugo + tout le MTH</small></p>
+					<p><small>merci spécial à Charlotte, Chloe, Estelle, Julien(s) + tout le MTH</small></p>
 				</section>
 
 			</div>
